task repo and partner mapper